<resources>

    //General
    <string name="app_name">Mocher</string>

    //Bottom Navigation Menu
    <string name="play_alone">Solomodus</string>
    <string name="join_group">Gruppe beitreten</string>
    <string name="create_group">Gruppe erstellen</string>

    //Recipe Card
    <string name="calories">Brennwert</string>
    <string name="fat">Fett</string>
    <string name="carbohydrates">Kohlenhydrate</string>
    <string name="protein">Eiweiss</string>
    <string name="fiber">Ballaststoffe</string>
    <string name="time_total">Zubereitungszeit</string>
    <string name="time_preparation">Vorbereitungszeit</string>

    //Swipe
    <string name="swipe_placeholder">Keine Filter Treffer</string>

    //Tutorial
    <string name="like">Mag ich</string>
    <string name="dislike">Mag ich nicht</string>
    <string name="lets_go">Alles klar - los geht\'s!</string>

    //Result
    <string name="result_placeholder">Du musst erst Rezepte bewerten bevor du hier Ergebnisse sehen kannst.</string>
    <string name="result_placeholder_join_lobby">Die Abstimmung läuft noch. Die Ergebnisse werden veröffentlicht sobald der Host die Abtimmung beendet hat.</string>
    <string name="result_placeholder_create_lobby">Die Abstimmung läuft noch. Sobald alle Teilnehmer ihre Daten hochgeladen haben kannst du die Abstimmung durch einen Klick auf \'Abstimmung beenden\' schließen. Danach werden die Ergebnisse hier veröffentlicht.</string>
    <string name="results">Auswertung</string>
    <string name="offline_participants">Teilnehmer: 1</string>
    <string name="tooltip_votes">Anzahl der Stimmen</string>

    //Loadscreen
    <string name="loadScreen_standard">Lädt. Bitte warten...</string>

    <string-array name="genres">
        <item>Abenteuer</item>
        <item>Action</item>
        <item>Animation</item>
        <item>Dokumentarfilm</item>
        <item>Drama</item>
        <item>Familie</item>
        <item>Fantasy</item>
        <item>Historie</item>
        <item>Horror</item>
        <item>Komödie</item>
        <item>Kriegsfilm</item>
        <item>Krimi</item>
        <item>Liebesfilm</item>
        <item>Musik</item>
        <item>Mystery</item>
        <item>Science Fiction</item>
        <item>Thriller</item>
        <item>TV-Film</item>
        <item>Western</item>
    </string-array>

    <string-array name="actors">
        <item>Adam Sandler</item>
        <item>Al Pacino</item>
        <item>Alan Rickman</item>
        <item>Anthony Hopkins</item>
        <item>Brad Pitt</item>
        <item>Bruce Willis</item>
        <item>Christian Bale</item>
        <item>Christoph Waltz</item>
        <item>Clint Eastwood</item>
        <item>Daniel Craig</item>
        <item>Denzel Washington</item>
        <item>Dwayne Johnson</item>
        <item>Gary Oldman</item>
        <item>George Clooney</item>
        <item>Harrison Ford</item>
        <item>Jackie Chan</item>
        <item>Jake Gyllenhaal</item>
        <item>Jason Statham</item>
        <item>Johnny Depp</item>
        <item>Keanu Reeves</item>
        <item>Kevin Spacey</item>
        <item>Leonardo DiCaprio</item>
        <item>Liam Neeson</item>
        <item>Matt Damon</item>
        <item>Mel Gibson</item>
        <item>Morgan Freeman</item>
        <item>Patrick Stewart</item>
        <item>Rober De Niro</item>
        <item>Robert Downey Jr.</item>
        <item>Robin Williams</item>
        <item>Russel Crowe</item>
        <item>Samuel L. Jackson</item>
        <item>Sean Connery</item>
        <item>Tom Cruise</item>
        <item>Tom Hanks</item>
        <item>Will Smith</item>
    </string-array>

    <string-array name="actresses">
        <item>Amy Adams</item>
        <item>Anne Hathaway</item>
        <item>Brie Larson</item>
        <item>Cameron Diaz</item>
        <item>Cate Blanchett</item>
        <item>Elizabeth Olsen</item>
        <item>Elliot Page</item>
        <item>Emma Stone</item>
        <item>Emma Watson</item>
        <item>Gwyneth Paltrow</item>
        <item>Helena Bonham Carter</item>
        <item>Jennifer Lawrence</item>
        <item>Jodie Foster</item>
        <item>Judi Dench</item>
        <item>Julia Roberts</item>
        <item>Julianne Moore</item>
        <item>Kate Winslet</item>
        <item>Kristen Stewart</item>
        <item>Michelle Rodríguez</item>
        <item>Naomi Watts</item>
        <item>Natalie Portman</item>
        <item>Sandra Bullock</item>
        <item>Scarlett Johansson</item>
        <item>Zoe Saldana</item>
    </string-array>

    <string-array name="directors">
        <item>Anthony Russo</item>
        <item>Bryan Singer</item>
        <item>Chris Columbus</item>
        <item>Christopher Nolan</item>
        <item>David Yates</item>
        <item>George Lucas</item>
        <item>Gore Verbinski</item>
        <item>J. J. Abrams</item>
        <item>James Cameron</item>
        <item>Joe Russo</item>
        <item>Jon Favreau</item>
        <item>Michael Bay</item>
        <item>Peter Jackson</item>
        <item>Pierre Coffin</item>
        <item>Quentin Tarantino</item>
        <item>Ridley Scott</item>
        <item>Robert Zemeckis</item>
        <item>Roland Emmerich</item>
        <item>Ron Howard</item>
        <item>Steven Spielberg</item>
        <item>Tim Burton</item>
    </string-array>

</resources>